--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- 3. Filtres (masqués avant le scan / import JSON) -->
     <section id="filtersSection" class="card hidden-block">
       <h2>3. Filtres</h2>
-      <div class="filters-grid">
+            <div class="filters-grid">
         <div>
           <label for="filterDO">Donneur d'ordre</label>
           <select id="filterDO" multiple></select>
@@ -100,8 +100,41 @@
         <div>
           <label for="filterConclusion">Conclusion (texte)</label>
           <input id="filterConclusion" type="text" placeholder="Recherche plein texte dans les conclusions…" />
-          <small>Filtre appliqué en temps réel.</small>
+          <small>Filtre appliqué en temps réel sur l'ensemble des conclusions.</small>
         </div>
+        <div>
+          <label for="filterDpeClass">Classe DPE (A à G)</label>
+          <select id="filterDpeClass">
+            <option value="">Toutes</option>
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="C">C</option>
+            <option value="D">D</option>
+            <option value="E">E</option>
+            <option value="F">F</option>
+            <option value="G">G</option>
+          </select>
+          <small>Filtre sur la classe énergie extraite de la conclusion DPE.</small>
+        </div>
+        <div>
+          <label>Conso énergie (kWh/m²/an)</label>
+          <div class="filters-inline">
+            <input id="filterDpeConsoMin" type="number" placeholder="Min" />
+            <span class="filters-sep">–</span>
+            <input id="filterDpeConsoMax" type="number" placeholder="Max" />
+          </div>
+          <small>Plage de consommation énergétique.</small>
+        </div>
+        <div>
+          <label>Émissions CO₂ (kg/m²/an)</label>
+          <div class="filters-inline">
+            <input id="filterDpeCO2Min" type="number" placeholder="Min" />
+            <span class="filters-sep">–</span>
+            <input id="filterDpeCO2Max" type="number" placeholder="Max" />
+          </div>
+          <small>Plage d'émissions de gaz à effet de serre.</small>
+        </div>
+      </div>
       </div>
       <div class="flex-row filter-actions">
         <div class="flex-row">
@@ -220,13 +253,6 @@
           </div>
         </section>
 
-        <!-- 4. Récap global -->
-        <section class="fiche-section">
-          <h4>4. Récapitulatif global</h4>
-          <div id="ficheSummaryContainer" class="fiche-summary">
-            <!-- Tableau recap généré en JS -->
-          </div>
-        </section>
       </div>
     </div>
   </div>
